# dx-admin-template

./: AGENTS.md  Cargo.toml  Dioxus.toml  README.md
assets/styling/: admin.css  main.css  orders.css  shadcn.css
src/: main.rs  time.rs
src/components/: mod.rs
src/components/ui/: README.md  USAGE.md  accordion.rs  alert.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  calendar.rs  card.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  date_range_picker.rs  dialog.rs  dropdown_menu.rs  file_drop_zone.rs  form_field.rs  hover_card.rs  input.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  pagination.rs  popover.rs  progress.rs  radio_group.rs  resizable.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  sidebar.rs  skeleton.rs  slider.rs  steps.rs  (+9 more)
src/views/: components.rs  home.rs  mod.rs  navbar.rs  orders.rs
